tests/models/enum/unnamed/u128/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(gt = 2)]
        u128
    ),
}
fn main() {}
