tests/models/enum/unnamed/u128/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        u128
    ),
}
fn main() {}
